--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,7 +21,9 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
         DRY_RUN: true
-    - run: echo "VALUEEEE ISS ${{ env.GITHUB_JOB }}"
+    - run: echo "VALUEEEE ISS ${{ env.new_tag }}"
+      env:
+        TAG: ${{ new_tag }}
 #     - name: Sample
 #       run: echo "Hello $DRY_RUN.tag $DRY_RUN.new_tag  today is Monday!"
     
