--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -23,7 +23,7 @@ jobs:
         DRY_RUN: true
     - run: echo "VALUEEEE ISS $TAG"
       env:
-        TAG: ${{ github.new_tag }}
+        TAG: ${{ steps.Ctag.outputs.new_tag }}
 #     - name: Sample
 #       run: echo "Hello $DRY_RUN.tag $DRY_RUN.new_tag  today is Monday!"
     
