--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,7 +21,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
         DRY_RUN: true
-    - run: echo "VALUEEEE ISS $TAG"
+    - run: echo "VALUEEEE ISS ${{ steps.Ctag.outputs.new_tag }}"
       env:
         TAG: ${{ steps.Ctag.outputs.new_tag }}
 #     - name: Sample
