--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -29,7 +29,7 @@ jobs:
       contents: read
       packages: write 
     steps:
-      - uses: actions/checkout@v2
+#      - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
           java-version: '11'
